[gd_scene load_steps=2 format=3 uid="uid://c57sfkee815gl"]

[ext_resource type="Script" path="res://basic/polygon.gd" id="1_v8cn7"]

[node name="Polygon" type="Polygon2D"]
polygon = PackedVector2Array(25, 0, 20.2254, 14.6946, 7.72542, 23.7764, -7.72542, 23.7764, -20.2254, 14.6946, -25, 3.06152e-15, -20.2254, -14.6946, -7.72542, -23.7764, 7.72542, -23.7764, 20.2254, -14.6946)
script = ExtResource("1_v8cn7")

[node name="Border" type="Line2D" parent="."]
points = PackedVector2Array(25, 0, 20.2254, 14.6946, 7.72542, 23.7764, -7.72542, 23.7764, -20.2254, 14.6946, -25, 3.06152e-15, -20.2254, -14.6946, -7.72542, -23.7764, 7.72542, -23.7764, 20.2254, -14.6946)
closed = true
width = 0.0
default_color = Color(0, 0, 0, 1)

[node name="Clickable" type="Area2D" parent="."]
monitorable = false

[node name="Shape" type="CollisionPolygon2D" parent="Clickable"]
polygon = PackedVector2Array(25, 0, 20.2254, 14.6946, 7.72542, 23.7764, -7.72542, 23.7764, -20.2254, 14.6946, -25, 3.06152e-15, -20.2254, -14.6946, -7.72542, -23.7764, 7.72542, -23.7764, 20.2254, -14.6946)

[connection signal="input_event" from="Clickable" to="." method="_on_clickable_input_event"]
[connection signal="mouse_entered" from="Clickable" to="." method="_on_clickable_mouse_entered"]
[connection signal="mouse_exited" from="Clickable" to="." method="_on_clickable_mouse_exited"]
